Fix Texture Alpha Blending (#527)